plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'shm.yandex.practicum'
version = '0.0.1-SNAPSHOT'
description = 'Course Yandex practicum. Middle Java-developer. Sprint4.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-h2console'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'io.minio:minio:8.6.0'
	implementation 'javax.annotation:javax.annotation-api:1.3.2'

	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	useJUnitPlatform()
	jvmArgs = [
			"-XX:+EnableDynamicAgentLoading",
			"-Djdk.instrument.traceUsage"
	]
}